--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 **.pdf
-**.csv
+data/export/**.csv
+data/export_diff/**.csv
 # Skips lock file when .fods open in LibreOffice Calc
 **.fods#
 **.fodt#
